--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,29 @@
   DIAGNOSTIC STYLING
 */
 body {
-  background: gray;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.9)
+  ), url('../img/bg.jpg');
 }
 
-* {
-  outline: 1px dotted black;
+/************
+COLOR PALETTE
+************/
+:root {
+  --primary-color: #0d1418;
+  --secondary-color: #37d623;
+  --tertiary-color: #94a19a;
+  --tint-color: white;
+  --shade-color: black;
+  /* SECOND CHOICE
+  --primary-color: #1d0d4a;
+  --secondary-color: #70838a;
+  --tertiary-color: #0f1f32;
+  --tint-color: white;
+  --shade-color: black;*/
 }
+
 
 /************
 LAYOUT
@@ -22,7 +39,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-  grid-gap: 1em;
+  /* grid-gap: 1em; */
 }
 
 header,
@@ -42,12 +59,25 @@ aside {
 /************
 HEADER
 ************/
+header {
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  );
+}
+
 header h1 {
   font: 5.0em 'IM Fell English SC', serif;
+  color: white;
+  text-align: center;
 }
 
 header h5 {
   font: 1.2em Arial, Tahoma, sans-serif;
+  color: var(--tertiary-color);
+  display: flex;
+  justify-content: center;
+  align-content: flex-start;
 }
 
 
@@ -71,10 +101,15 @@ video {
 /************
 ACTORS
 ************/
-main section { 
+main section#actors { 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+main section#actors img {
+  width: 100px;
+  height: auto;
 }
 
 /************
