--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,14 @@ nav {
   position: fixed;
 }
 
-nav a {
+nav a, a:link, a:visited {
   text-decoration: none;
   color: white;
   font: 1.4em 'IM Fell English SC', serif;
+}
+
+nav a:hover {
+  color: limegreen;
 }
 
 
