--- a/css/styles.css
+++ b/css/styles.css
@@ -39,22 +39,22 @@ div#container {
   
   /* CSS Grid Layout   */
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: auto;
   /* grid-gap: 1em; */
 }
 
 header,
 footer {
-  grid-column: 1 / span 5;
+  grid-column: 1 / span 6;
 }
 
 main {
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 4;
 }
 
 aside {
-  grid-column: span 2;
+  grid-column: 5;
 }
 
 
@@ -124,10 +124,10 @@ main {
     rgba(0, 0, 0, 0.8),
     rgba(0, 0, 0, 0.8)
   );
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto;
-  grid-gap: 0.5em;
+}
+
+main section {
+  padding-bottom: 2em;
 }
 
 main section h2 {
@@ -140,12 +140,8 @@ main section h2 {
 /************
 MOVIE TRAILER w/ MEDIA ELEMENT PLAYER
 ************/
-main section#trailer {
-  grid-column: span 2;
-}
-
 /* Fit <video> to container */
-video {
+section#trailer video {
   max-width: 100%;
 }
 
@@ -155,60 +151,64 @@ video {
 }
 
 .mejs__time-current {
-  background: tomato;
+  background: limegreen;
 }
 
 
 /************
 SUMMARY
 ************/
-main section#summary {
-  grid-column: 1;
-  width: 100%;
-}
-
-main section#summary p {
+section#summary p {
   font: 1em Arial, Tahoma, sans-serif;
   color: white;
   padding-left: 1.5em;
   line-height: 1.4em;
 }
 
+
 /************
-ACTORS
+ACTORS W/ SLICK CAROUSEL
 ************/
-main section#actors { 
-  grid-column: 2;
-
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center; */
-}
-
-main section#actors figure {
-  display: grid;
-  grid-template-rows: 90% 10%;
-  grid-gap: 1em;
+section#actors figure {
   width: 100%;
   margin: 0 auto;
+
+  display: grid;
+  grid-template-rows: 90% 10%;
+  grid-row-gap: 1em;
 }
 
-main section#actors div figure img {
-  width: 100px;
-  height: auto;
+section#actors img {
   grid-row: 1;
+  width: 200px;
   margin: 0 auto;
 }
-
 
 section#actors figcaption {
   grid-row: 2;
+  width: 100%;
+  margin: 0 auto;
   color: white;
   text-align: center;
 }
 
+/* Slider Customization */
+.slick-dots li.slick-active button:before {
+  color: var(--secondary-color);
+}
+
+.slick-dots li button:before {
+  color: white;
+}
+
+.slider {
+  width: 75%;
+  margin: 0 auto;
+}
+
+
 /************
-FOOTER
+FOOTER W/ CURRENT YEAR
 ************/
 footer {
   background: linear-gradient(
