--- a/css/styles.css
+++ b/css/styles.css
@@ -288,13 +288,13 @@ aside ul {
   border: 0;
 }
 
-aside img {
-  width: 50px;
-  height: auto;
+aside ul li {
+  padding: 1.2em 0;
 }
 
-aside li {
-  padding: 1.2em 0;
+aside ul li img {
+  width: 50px;
+  height: auto;
 }
 
 
