--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ HEADER
 header {
   margin-top: 3em;
   background: linear-gradient(
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.1)
   );
   display: grid;
   grid-template-rows: 2;
@@ -113,6 +113,10 @@ header h5 {
   grid-row: 2;
   font: 1.2em Arial, Tahoma, sans-serif;
   color: var(--tertiary-color);
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0.8)
+  );
 }
 
 
@@ -236,10 +240,19 @@ SCREENSHOTS
 ************/
 section#screenshots {
   color: white;
+  width: 100%;
+  margin: 0 auto;
+}
+
+section#screenshots #thumbnail-flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 section#screenshots img {
-  width: 90%;
+  width: 25%;
   margin: 0 auto;
 }
 
